|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 200?, PHP 5.3.0 Alpha 2
- Removed shebang line check from CGI sapi (it is checked by scanner). (Dmitry)

- Changed session_start() to return false when session startup fails. (Jani)
- Changed property_exists() to check the existence of a property independent of
  accessibility (like method_exists()). (Felipe)

- Added system independent realpath() implementation which caches intermediate
  directories in realpath-cache. (Dmitry)
- Added optional clear_realpath_cache and filename parameters to
  clearstatcache(). (Jani, Arnaud)
- Added litespeed SAPI module. (George Wang)
- Added ext/hash support to ext/session's ID generator. (Sara)
- Added quoted_printable_encode() function. (Tony)
- Added stream_context_set_default() function. (Davey Shafik)
- Added optional "is_xhtml" parameter to nl2br() which makes the function
  output <br> when false and <br /> when true (FR #34381). (Kalle)

- Improved Windows support and portability for stat(), touch(), filemtime(),
  filesize() and related functions. (Pierre)

- Fixed a bug causing miscalculations with the "last <weekday> of <n> month"
  relative time string. (Derick)

- Fixed bug #45798 (sqlite3 doesn't notice if variable was bound). (Felipe)
- Fixed bug #45763 (mysqli::multi_query does not work with mysqlnd). (Johannes)
- Fixed bug #45757 (FreeBSD4.11 build failure: failed include; stdint.h).
  (Hannes)
- Fixed bug #45743 (property_exists fails to find static protected member in 
  child class). (Felipe)
- Fixed bug #45717 (Fileinfo/libmagic build fails, missing err.h and getopt.h).
  (Derick)
- Fixed bug #45696 (Not all DateTime methods allow method chaining). (Derick)
- Fixed bug #45636 (fileinfo ext duplicate strndup). (Derick)
- Fixed bug #45545 (DateInterval has 4 char limitation for ISO durations).
  (Derick)
- Fixed bug #45447 (Filesystem time functions on Vista and server 2008).
  (Pierre)